# util-linux

./: .clangd  .editorconfig  .gitignore  .packit.yaml  .shellcheckrc  .travis-functions.sh  .travis.yml  AGENTS.md  ANNOUNCE  AUTHORS  CLAUDE.md  COPYING  ChangeLog  DEPRECATED  FAQ  HISTORY  INSTALL  LSM  MAINTAINER  MAINTAINERS  MCONFIG  Makefile  Makefile.am  Makefile.in  NEWS  Notes.pre1995  README  README.clock  README.devel  README.licensing  README.md  TODO  VERSION  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  core.h  getpoe.sh  (+18 more)
disk-utils/: .gitignore  Makefile  Makefile.am  Makefile.in  Makemodule.am  README.bootutils-0.1  README.fdisk  README.fdisk.alpha  README.fdisk.bsd  addpart.8  addpart.8.adoc  addpart.c  bitops.h  blockdev.8  blockdev.8.adoc  blockdev.c  cfdisk.8  cfdisk.8.adoc  cfdisk.8.bak  cfdisk.c  cfdisk.c.bak  cramfs.h  cramfs_common.c  cramfs_common.h  delpart.8  delpart.8.adoc  delpart.c  elvtune.8  elvtune.c  fdformat.8  fdformat.8.adoc  fdformat.c  fdisk-list.c  fdisk-list.h  fdisk-menu.c  fdisk.8  fdisk.8.adoc  fdisk.c  fdisk.h  fdisklabel.c  (+55 more)
fdisk/: .gitignore  Makefile  Makefile.am  Makefile.in  README.fdisk  addpart.c  cfdisk.8  cfdisk.c  common.h  delpart.c  disksize.c  fdisk.8  fdisk.c  fdisk.h  fdiskaixlabel.c  fdiskaixlabel.h  fdiskbsdlabel.c  fdiskbsdlabel.h  fdiskdoslabel.c  fdiskdoslabel.h  fdiskmaclabel.c  fdiskmaclabel.h  fdisksgilabel.c  fdisksgilabel.h  fdisksunlabel.c  fdisksunlabel.h  gpt.c  i386_sys_types.c  llseek.c  partitiontype.c  partname.c  sfdisk.8  sfdisk.c  utils.c
fsck/: .gitignore  Makefile.am  fsck.8  fsck.c  fsck.h
getopt/: .gitignore  Changelog  Makefile  Makefile.am  Makefile.in  README  TODO  getopt-1.1.3.lsm  getopt.1  getopt.c  parse.tcsh  test.tcsh
include/: Makefile.am  Makemodule.am  all-io.h  at.h  audit-arch.h  bitops.h  blkdev.h  boottime.h  buffer.h  c.h  c_strtod.h  canonicalize.h  caputils.h  carefulputc.h  cctype.h  closestream.h  color-names.h  colors.h  column-list-table.h  config-files.h  configs-file.h  configs.h  consoles.h  coverage.h  cpuset.h  crc32.h  crc32c.h  crc64.h  debug.h  debugobj.h  default_shell.h  dl-cryptsetup.h  dl-econf.h  dl-selinux.h  dl-systemd.h  dl-utils.h  encode.h  env.h  errs.h  exec_shell.h  (+80 more)
lib/: .gitignore  Makefile  Makefile.am  Makefile.in  Makemodule.am  README.widechar  at.c  blkdev.c  boottime.c  buffer.c  c_strtod.c  canonicalize.c  caputils.c  carefulputc.c  carefulputc.h  color-names.c  colors.c  config-files.c  configs-file.c  configs.c  consoles.c  cpuset.c  crc32.c  crc32c.c  crc64.c  debug.c  default_shell.c  dl-cryptsetup.c  dl-econf.c  dl-selinux.c  dl-systemd.c  dl-utils.c  encode.c  env.c  env.h  err.c  err.h  errs.h  exec_shell.c  fileeq.c  (+63 more)
libblkid/: .gitignore  COPYING  Makefile.am  Makemodule.am  blkid.pc.in  libblkid.3  libblkid.3.adoc  meson.build
libfdisk/: Makemodule.am  fdisk.pc.in  meson.build
liblastlog2/: COPYING  Makemodule.am  README.md  lastlog2.pc.in  meson.build
libmount/: .gitignore  COPYING  Makefile.am  Makemodule.am  meson.build  mount.pc.in
libptysession/: COPYING  Makemodule.am  meson.build  ptysession.pc.in
libsmartcols/: COPYING  Makemodule.am  meson.build  scols-filter.5.adoc  smartcols.pc.in
libuuid/: .gitignore  COPYING  Makefile.am  Makemodule.am  meson.build  uuid.pc.in
login-utils/: .gitignore  Makefile  Makefile.am  Makefile.in  Makemodule.am  README.admutil  README.getty  README.poeigl  agetty.8  agetty.c  auth.c  auth.h  ch-common.c  ch-common.h  checktty.c  chfn.1  chfn.1.adoc  chfn.c  chsh.1  chsh.1.adoc  chsh.c  cryptocard.c  cryptocard.h  getdef.c  getdef.h  halt.8  initctl.8  initctl.c  islocal.c  islocal.h  last-deprecated.c  last.1  last.1.adoc  last.1.orig  last.c  last.c.orig  lastb.1  libuser.c  libuser.h  login.1  (+55 more)
misc-utils/: .gitignore  Makefile  Makefile.am  Makefile.in  Makemodule.am  README.flushb  README.hostname  README.namei  README.script  README1.namei  blkid.8  blkid.8.adoc  blkid.c  cal.1  cal.1.adoc  cal.c  cal_test.sh  chkdupexe.1  chkdupexe.pl  clear.1  copyfilerange.1.adoc  copyfilerange.c  ddate.1  ddate.c  dnsdomainname.1  domainname.1  domainname.c  dsplit.1  dsplit.c  eject  eject.1  eject.c  enosys.1.adoc  enosys.c  exch.1.adoc  exch.c  fadvise.1.adoc  fadvise.c  fdrecv.1.adoc  fdrecv.c  (+148 more)
mount/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.standalone  README.mount  bind.c  devname.c  fsprobe.c  fsprobe.h  fsprobe_blkid.c  fsprobe_volumeid.c  fstab.5  fstab.c  fstab.h  get_label_uuid.c  get_label_uuid.h  linux_fs.h  lomount.c  lomount.h  loop.h  losetup.8  losetup.c  mk_loop_h  mntent.c  mntent.h  mount.8  mount.c  mount.h  mount.smb  mount.smbfs  mount_blkid.c  mount_blkid.h  mount_by_label.c  mount_by_label.h  mount_constants.h  mount_guess_fstype.c  mount_guess_fstype.h  mount_guess_rootdev.c  mount_guess_rootdev.h  (+29 more)
pam_lastlog2/: Makemodule.am  meson.build
partx/: .gitignore  Makefile  Makefile.am  Makefile.in  addpart.8  addpart.c  bsd.c  crc32.c  crc32.h  delpart.8  delpart.c  dos.c  dos.h  efi.h  gpt.c  gpt.h  mac.c  partx.8  partx.c  partx.h  solaris.c  sun.c  unixware.c
po-man/: .gitignore  Makefile.am  Makemodule.am  README.md  ar.po  cs.po  de.po  es.po  fr.po  install-translations.sh  ko.po  meson.build  pl.po  po4a.cfg  pt_BR.po  ro.po  sr.po  sv.po  translate.sh  uk.po  util-linux-man.pot
schedutils/: .gitignore  Makefile.am  Makefile.in  Makemodule.am  chrt.1  chrt.1.adoc  chrt.c  coresched.1.adoc  coresched.c  coreset.c  ionice.1  ionice.1.adoc  ionice.c  meson.build  sched_attr.h  schedutils.c  schedutils.h  taskset.1  taskset.1.adoc  taskset.c  uclampset.1  uclampset.1.adoc  uclampset.c
simpleinit/: .gitignore  Makefile.am  shutdown.c  simpleinit.8  simpleinit.c
sys-utils/: .gitignore  MAKEDEV  MAKEDEV.8  Makefile  Makefile.am  Makefile.in  Makemodule.am  README.MAKEDEV  README.linux68k  README.setserial  adjtime_config.5  adjtime_config.5.adoc  arch.1  arch.c  blkdiscard.8  blkdiscard.8.adoc  blkdiscard.c  blkpr.8.adoc  blkpr.c  blkreport.8  blkreport.c  blkreset.8  blkreset.c  blkzone.8  blkzone.8.adoc  blkzone.c  (+191 more)
(+3862 files in other folders)
